Some quality assurance.